--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -76,7 +76,7 @@
       font-family: $sans-serif;
       font-size: 14px;
       font-weight: bold;
-      line-height: 1.5;
+      line-height: 1.75;
       text-align: center;
       text-decoration: none;
       color: $muted-text-color;
@@ -561,6 +561,6 @@
   }
 
   li ul li ul li ul li ul li ul > li a {
-    padding-left: 3.25rem
+    padding-left: 3.25rem;
   }
 }
